--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script
+      src="https://kit.fontawesome.com/2e7ae86a6e.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>React App</title>
   </head>
   <body>
